o3api-deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o3api-deployment
  namespace: o3as
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      name: o3api-pod
  template:
    metadata:
      name: o3api-template
      labels:
        name: o3api-pod
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: o3api-pod
              topologyKey: kubernetes.io/hostname
      priorityClassName: production-medium
      containers:
      - name: o3api-app
        image: o3as/o3api
        imagePullPolicy: Always
        resources:
          requests:
            memory: "900Mi"
            cpu: "1100m"
          limits:
            memory: "900Mi"
            cpu: "1100m"
        ports:
        - containerPort: 5005
          name: port0
        volumeMounts:
        - mountPath: /mnt/o3as-data
          name: nfs-o3as-data
      volumes:
      - name: nfs-o3as-data
        nfs:
          path: /pv/o3as-data
          server: kubeserver

# + Apply o3api-service.yaml for Service
# + Apply o3api-hpa.yaml for Horizonthal Pod Autoscaling
