o3web-service.yml
# Service
kind: Service
apiVersion: v1
metadata:
  name: o3web-service
  namespace: o3as
spec:
  selector:
    name: o3web-pod
  ports:
    - protocol: TCP
      name: http3
      port: 3000
      nodePort: 30300
  type: NodePort
#  type: LoadBalancer
