o3as-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: o3as-ingress
  namespace: o3as
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-site'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
#    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, OPTIONS
#    nginx.ingress.kubernetes.io/cors-allow-origin: http(s)://test.o3as.fedcloud.eu, http(s)://web.o3as.fedcloud.eu
#    nginx.ingress.kubernetes.io/enable-cors: 'true'
#    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
##    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
##    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'

spec:
  tls:
  - hosts:
    - api.o3as.fedcloud.eu
    - web.o3as.fedcloud.eu
    secretName: site-tls

  rules:
  - host: web.o3as.fedcloud.eu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: o3api-service
          servicePort: 5005
      - path: /
        pathType: Prefix
        backend:
          serviceName: o3web-service
          servicePort: 3000
  - host: api.o3as.fedcloud.eu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: o3api-service
          servicePort: 5005
      - path: /
        pathType: Exact
        backend:
          serviceName: o3api-service
          servicePort: 5005
